k8s/staging/kafka-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
  namespace: confluent-staging
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: kafka
  ports:
    - name: external
      port: 9092
      targetPort: 9092
      protocol: TCP
